--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>一体化系统</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
@@ -15,7 +17,9 @@
         continue.</strong
       >
     </noscript>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=58cd16d8e5dab86f9c8fdfbaacc26959"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
